# synapse

./: .env.example  .gitignore  404.html  ARCHITECTURE.md  BUILD_LOG.md  BUILD_STATUS.md  BUILD_STATUS_REALTIME.md  CENTRALIZATION_AUDIT_REPORT.md  CHANGELOG.md  CODE_GAPS.md  CODE_QUALITY_FINAL_SUMMARY.md  CODE_QUALITY_PLAN.md  CODE_QUALITY_REPORT.md  CONTRACT_ACTIVATION_REPORT.md  CONTRIBUTING.md  DECENTRALIZATION_AUDIT_REPORT.md  DECENTRALIZATION_FIXES_SUMMARY.md  DECENTRALIZATION_REPORT.md  DECISIONS.md  DEMAND_SUPPLY_ARCHITECTURE.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_LOG.md  DEPLOYMENT_TARGETS.md  DESIGN_IMPLEMENTATION_COMPLETE.md  DISRUPTIVE_IDEAS.md  DOMAIN_TLS_RUNBOOK.md  FINAL_ACTIVATION_REPORT.md  GIC_Calculator_CIL.xlsx  GOVERNANCE_IMPLEMENTATION_SUMMARY.md  GPU_VALIDATION_REPORT.md  HEARTBEAT.md  HOURLY_REPORT_H1.md  HOURLY_REPORT_H2.md  IDENTITY.md  INTEGRATION_HARDENING_SUMMARY.md  LAUNCH_CHECKLIST.md  LICENSE  MAINNET_READINESS.md  MEMORY.md  (+39 more)
.github/workflows/: ci.yml  deploy-gateway.yml  deploy-landing.yml  deploy.yml  docker-build.yml  load-tests.yml
.openclaw/: workspace-state.json
archive/: README.md
archive/synapse-advanced/: .env.example
archive/synapse-backend/: QUICKSTART.md
archive/synapse-contracts/: .env.example  package-lock.json  tsconfig.json
archive/synapse-node/: .env.example  Makefile  README.md  pyproject.toml
archive/synapse-node/src/synapse_node/cli/: __init__.py
archive/synapse-node/src/synapse_node/core/: inference.py  node.py
archive/synapse-node/src/synapse_node/network/: mesh.py
archive/synapse-node/tests/: __init__.py
assets/: Documentation-Ct7nOO5g.js  Documentation-DRYGUK6d.js  NotFound-CaJWGkXe.js  Pricing-B6-QmSgz.js  QuickStart-PhjtIOcV.js  activity-DXvdQblK.js  arrow-left-U8JTlqXU.js  arrow-right-BXtwo9J8.js  bar-chart-3-BOhKJciY.js  check-circle-2-CE4CkBB7.js  chevron-right-CE8T5eVv.js  code-KkBdu05e.js  copy-BcaOtv3V.js  cpu-B8PicFvO.js  index-CuqtzBvN.js  index-lhDcGL5T.js  play-C9pdtiV_.js  settings-DnH2xl_o.js  vendor-charts-DXB083DO.js  vendor-wagmi-ZKk7k-r9.js  x-circle-C-KwpzVY.js
chunks/: 468-80758cd6dd281d69.js
community/: README.md
contracts/: hardhat.config.js  package.json
css/: 671ad3c2ecfa18f8.css
dashboard/: index.html  sw.js
deck_audit/: CAPITAL_STRUCTURE_DATA.md  DECK_AUDIT.md  SPREADSHEET_DATA.md
deployment/: DEPLOYMENT_SUMMARY.md  README.md
docs/: API.md  ARCHITECTURE.md  CONTRACT_RUNBOOK.md  DEVELOPER_GUIDE.md  OPERATOR.md  README.md  RELEASE_NOTES_P0.md  RELEASE_NOTES_v0.3.md  SECURITY_HARDENING.md  glossary.md
infra/: deploy-production.sh  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.proxy.yml  preflight-check.sh
memory/: 2026-02-15.md  2026-02-23.md
mobile/: sw.js
monitoring/: alert_rules.yml  docker-compose.yml  prometheus.yml
scripts/: acceptance-test.sh  audit-repo-integrity.sh  deploy-mainnet.sh  deploy-prod.sh  deploy-simple.sh  deploy-testnet.sh  install-smoke.sh  install-uninstall.sh  install.sh  openclaw-watchdog.sh  seed-demand.sh  simulate-miner-claim.sh  smoke-test-gpu.sh  smoke-test.sh  validate-p0.sh  validate-public-staging.sh  validate-v0.3.sh
synapse-advanced/: .gitignore  Makefile  OVERVIEW.md  PROJECT_SUMMARY.md  README.md  hardhat.config.js  package.json
synapse-backend/: .env.example  .env.production.example  README.md  docker-compose.yml
synapse-contracts/: LICENSE  README.md  hardhat.config.cjs  package.json
synapse-core/: package-lock.json  tsconfig.json  vitest.config.ts
synapse-fixes/: README.md
synapse-frontend/: .dockerignore  .env.governance.example  BUILD_SUMMARY.md  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
synapse-landing/: index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
synapse-mobile/: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  app.json  babel.config.js  metro.config.js  package.json  package.simplified.json  tsconfig.json  tsconfig.paths.json
synapse-node/: .dockerignore  .gitignore  Dockerfile  LICENSE  docker-compose.yml  quickstart.sh  setup.sh
synapse-payments/: .env.example  .gitignore  Dockerfile  README.md  package.json  tsconfig.build.json  tsconfig.json
synapse-sdk/: CONTRIBUTING.md  LICENSE  README.md
synapse-sdk/python-sdk/: README.md  pyproject.toml
synapse-sdk/python-sdk/examples/: basic.py
synapse-sdk/python-sdk/src/synapse_sdk/: __init__.py
synapse-sdk/python-sdk/tests/: test_sdk.py
synapse-testing/: .eslintrc.js  README.md  package.json  playwright.config.ts  tsconfig.json  vitest.integration.config.ts  vitest.unit.config.ts
(+711 files in other folders)
