[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-node"
version = "0.1.0"
description = "Synapse Network Node - Decentralized AI Inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "vllm>=0.2.7",
    "torch>=2.1.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "pynvml>=11.5.0",
    "huggingface-hub>=0.20.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "cryptography>=42.0.0",
    "web3>=6.15.0",
    "eth-account>=0.11.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
synapse = "synapse_node.cli.main:cli"
synapse-node = "synapse_node.cli.main:cli"

[project.urls]
Homepage = "https://github.com/synapse-network/node"
Repository = "https://github.com/synapse-network/node"
Issues = "https://github.com/synapse-network/node/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
synapse_node = ["*.yaml", "*.json", "*.circom"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
