[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-ai-sdk"
version = "1.0.0"
description = "Official Python SDK for Synapse AI API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Synapse AI", email = "support@synapse.ai" },
]
keywords = [
    "synapse",
    "ai",
    "llm",
    "openai",
    "api",
    "sdk",
    "async",
    "embeddings",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
jupyter = [
    "ipython>=8.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://docs.synapse.ai/sdk/python"
Documentation = "https://docs.synapse.ai/sdk/python"
Repository = "https://github.com/synapse-ai/sdk-python.git"
Issues = "https://github.com/synapse-ai/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse_sdk"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=synapse_sdk --cov-report=term-missing"

[tool.coverage.run]
source = ["src/synapse_sdk"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]